Random word selector added
Added functionality which allows to receive random word images and answers.
Next I have to resolve the bug, where picture from previous word is still standing befero the new picture.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ img {
     max-width: 400px;
 }
 
-.hidden2 {
-    display: none;
+
+
+.right {
+    background-color: goldenrod;
+}
+
+.wrong {
+    background-color: palevioletred;
 }
