Bug fix, json added
Pictures from previous questions are disappearing.
Correct message after right and wrong word choice.

Moved all questions from inde.js to separate json file.

--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ img {
 
 
 .right {
-    background-color: goldenrod;
+    color: goldenrod;
 }
 
 .wrong {
-    background-color: palevioletred;
+    color: palevioletred;
 }
